<resources>
    <string name="app_name">PHEOC</string>
    <string name="problem_hint">Type problem here…</string>
    <string name="title_activity_experiment">Experiment</string>
    <string name="hypothesis_hint">Type hypothesis here…</string>
    <string name="p">P</string>
    <string name="h">H</string>
    <string name="e">E</string>
    <string name="o">O</string>
    <string name="c">C</string>
    <string name="new_experiment">New Experiment</string>
    <string name="past_experiments">Past Experiments</string>
    <string name="experiment">Experiment</string>
    <string name="observations">Type observations here…</string>
    <string name="title_hint">Type title here…</string>
    <string name="trials">Trials</string>
    <string name="independent_variable_x">Independent Variable (x)</string>
    <string name="dependent_variable_y">Dependent Variable (y)</string>
    <string name="trial_1">1</string>
    <string name="trial_2">2</string>
    <string name="trial_3">3</string>
    <string name="trial_4">4</string>
    <string name="trail_5">5</string>
    <string name="trial_6">6</string>
    <string name="trial_7">7</string>
    <string name="trial_8">8</string>
    <string name="generate_graph">Generate Graph</string>
    <string name="conclusion">Type conclusion here…</string>
    <string name="title_activity_past__experiments">Past Experiments</string>
    <string name="deleted">Experiment deleted.</string>
    <string name="are_you_sure_all">Are you sure you want to delete all experiments?</string>
    <string name="are_you_sure_single">Are you sure you want to delete this experiment?</string>
    <string name="default_title">Untitled Experiment</string>
    <string name="experiment_updated">Experiment updated.</string>
    <string name="experiment_saved">Experiment saved.</string>
    <string name="delete_action">Delete</string>
    <string name="experiment_icon">experiment_icon</string>
    <string name="all_deleted">All experiments deleted.</string>
    <string name="delete_all_action">Delete all</string>
    <string name="title_default">Untitled Experiment</string>
</resources>
