<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="76dp"
    tools:context="com.scuddertechnologies.pheoc.MainMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/P_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p"
            android:textColor="#F44336"
            android:textSize="75sp" />

        <TextView
            android:id="@+id/H_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h"
            android:textColor="#FF9800"
            android:textSize="75sp" />

        <TextView
            android:id="@+id/E_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e"
            android:textColor="#FFEB3B"
            android:textSize="75sp" />

        <TextView
            android:id="@+id/O_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o"
            android:textColor="#00FF13"
            android:textSize="75sp" />

        <TextView
            android:id="@+id/C_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:textColor="#2196F3"
            android:textSize="75sp" />
    </LinearLayout>

    <Button
        android:id="@+id/new_experiment_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:onClick="startNewExperiment"
        android:text="@string/new_experiment"
        android:textColor="@color/colorSecondary" />

    <Button
        android:id="@+id/past_experiments_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_experiment_button"
        android:layout_marginTop="20dp"
        android:onClick="viewPastExperiments"
        android:text="@string/past_experiments"
        android:textColor="@color/colorSecondary" />

</RelativeLayout>
